# harness-benchmark

./: .gitignore  README.md  pyproject.toml
aidle/: cli.py  mcp_server.py  protocol.py  server.py  session.py  storage.py
aidle/challenges/: __init__.py  base.py  file_editor.py  haystack.py  maze.py
aidle/client/: __init__.py  base.py  maze_client.py
docs/: PROTOCOL.md
harness_benchmark/: cli.py  mcp_server.py  protocol.py  server.py  session.py  storage.py
harness_benchmark/challenges/: __init__.py  cipher_decoder.py  file_editor.py  haystack.py  log_investigator.py  maze.py
harness_benchmark/client/: __init__.py  maze_client.py
