[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-benchmark"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "websockets>=12.0",
    "mcp[cli]>=1.0",
]

[project.scripts]
harness-benchmark = "harness_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_benchmark*"]
